--- a/login.html
+++ b/login.html
@@ -299,7 +299,8 @@
 					}, false);
 					//
 					window.addEventListener('resize', function() {
-						oauthArea.style.display = document.body.clientHeight > 400 ? 'block' : 'none';
+						if(oauthArea!== undefined)
+							oauthArea.style.display = document.body.clientHeight > 400 ? 'block' : 'none';
 					}, false);
 					//
 					var backButtonPress = 0;
